--- a/Webroot/demos/bookstore/css/site.css
+++ b/Webroot/demos/bookstore/css/site.css
@@ -67,8 +67,8 @@ header h2 {
 }
 .coverflow-categories li {
     font-family: Arial, Sans-Serif;
-    padding: 5px;
-    margin: 0 23px;
+    padding: 6px 7px;
+    margin: 0 20px;
     border-radius: 3px;
     -moz-border-radius: 3px;
     -webkit-border-radius: 3px;
@@ -94,7 +94,7 @@ header h2 {
 .slider-controls {
     position: relative;
     top: -30px;
-    width: 83%;
+    width: 81%;
     margin: 0 auto;
 }
 .slider-controls a {
